Removed <br> spacing and fixed formatting issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1705,7 +1705,61 @@ input, select, textarea {
 
 /* Projects Section */
 
+    #solar-sail-pic {
+        filter: brightness(0.85);
+        width: 100%;
+    }
 
+    .project-image-credit {
+        position: relative;
+        font-size: 0.85rem;
+        opacity: 0.65;
+        text-align: right;
+        margin-top: -0.5rem;
+        float: right;
+    }
+
+    #tractor-beam-pic {
+        width: 100%;
+    }
+
+    .list-project-inner {
+        margin-bottom: 0.75rem;
+    }
+
+    .award-subtext {
+        opacity: 0.55;
+    }
+
+    .subsection-underline {
+        text-underline-offset: 5px;
+    }
+
+    .research-object {
+        margin-bottom: 5rem;
+        line-height: 1.5;
+    }
+
+    .laser-retrieval-awards-section {
+        margin-top: 1rem;
+    }
+
+    .research-description {
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
+    }
+
+    #propellant-pic {
+        width: 100%;
+    }
+
+    #microlens-pic {
+        width: 100%;
+    }
+
+    #dark-matter-pic {
+        width: 100%;
+    }
 
 /* Footer */
 
